# DataMind

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
config/: application.yaml  exports.yaml  profile.yaml  sources.yaml
datamind/: api.py
datamind/backends/compute/: duckdb_engine.py
datamind/backends/export/: local_export.py
datamind/backends/ingestion/: python_script.py
datamind/backends/metadata/: sqlite_store.py
datamind/backends/observability/: stdout_obs.py
datamind/backends/query/: duckdb_engine.py
datamind/backends/storage/: local_fs.py
datamind/core/: factory.py  natural_query.py
datamind/interfaces/: compute.py  export.py  ingestion.py  metadata.py  observability.py  query.py  scheduler.py  storage.py
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/macros/: cross_dialect.sql
dbt_project/models/: schema.yml
dbt_project/models/marts/: app_customer_segments.sql  app_daily_revenue.sql  fct_daily_revenue.sql  fct_monthly_kpi.sql
demo/: app.py
docs/: 01-solution-overview.md  02-data-architecture.md  03-data-governance.md  04-platform-engineering.md  05-security-compliance.md  06-tech-selection.md  07-demo-implementation.md  08-cost-resource.md  09-disaster-recovery.md  10-phased-roadmap.md  11-ai-integration.md
memory/: generation-log.yaml
scripts/: check_interface_leak.py  init_data.py  interpret.py
seeds/verification/: consistency-check.py  self-check.py
tests/api/: test_api.py
tests/e2e/: test_pipeline.py
tests/interfaces/: test_contract.py
(+6 files in other folders)
