[project]
name = "datamind"
version = "0.1.0"
description = "Elastic big data platform framework"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.10.0",
    "dbt-duckdb>=1.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.31.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "lightgbm>=4.2.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]
spark = [
    "dbt-spark>=1.7.0",
    "pyspark>=3.5.0",
]

[tool.setuptools.packages.find]
include = ["datamind*"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["tests/test_pipeline.py", "api/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
